--- a/apps/group-chat/src/app/components/groups-page/chat-panel/message-template/message-template.component.html
+++ b/apps/group-chat/src/app/components/groups-page/chat-panel/message-template/message-template.component.html
@@ -14,5 +14,7 @@
     <div class="" style="white-space: pre-wrap">
       {{ text }}
     </div>
+    <img *ngIf="image" [src]="imageSrc" alt="Preview" style="max-width: 300px;" />
+
   </div>
 </div>
