--- a/apps/group-chat/src/app/components/navbar/popUp-menu/menu.component.html
+++ b/apps/group-chat/src/app/components/navbar/popUp-menu/menu.component.html
@@ -1,6 +1,6 @@
 <!-- <div class="flex justify-content-end flex-wrap m-3 p-2 border-1 border-round bg-primary"> -->
 <div
-  class="flex justify-content-between align-items-center border-1 border-round bg-primary p-2 flex-shrink-0"
+  class="flex justify-content-between align-items-center border-1 border-round bg-primary flex-shrink-0"
 >
   <div class="w-3 flex justify-content-center align-items-center gap-2">
     <div class="font-bold text-5xl">Chats</div>
