add ... to message when resize the page , add option to send message with image without content

--- a/apps/group-chat/src/app/components/groups-page/chat-panel/message-template/message-template.component.html
+++ b/apps/group-chat/src/app/components/groups-page/chat-panel/message-template/message-template.component.html
@@ -1,9 +1,11 @@
 <div class="w-full flex m-1" [ngClass]="{ 'justify-content-end': username !== connectedUser }">
   <div [ngClass]="getClassByConnectedUser(username)"
     class="flex flex-column shadow-2 p-2 mb-3 border-round w-4 align-content-end " style="word-wrap: break-word;">
-    <div class="flex justify-content-between mb-2">
-      <span class="font-bold text-lg">{{ username }}</span>
-      <span class="text-base"> {{ date | date : 'short' }}</span>
+    <div class="flex justify-content-between mb-2  ">
+      <span class="font-bold text-lg">{{
+        username }}</span>
+      <span style="white-space: nowrap;   overflow: hidden;  text-overflow: ellipsis"
+        class="justify-content-between text-base"> {{ date | date : 'short' }}</span>
     </div>
 
     <div class="" style="white-space: pre-wrap">
